--- a/Internet-and-Data-Centers.tex
+++ b/Internet-and-Data-Centers.tex
@@ -1528,6 +1528,113 @@ Anche con un load balancer di livello sette si potrebbe realizzare un'architettu
 È possibile cambiare server durante una sessione tra il client ed il WS, poiché sono indipendenti, per ri-allocare un server. 
 
 
+Si usano dei SAN, che contengono gli hard disk fisici, connessi virtualmente su richiesta ad un server, per evitare di perdere i dati in caso di guasto del server, ed è utile per condividere facilmente i dati e migrare facilmente macchine virtuali, avendo accesso alla stessa memoria di massa virtuale. 
+
+Per realizzare algoritmi di scheduling, a conoscenza delle informazioni del client, si potrebbero dividere le richieste in base al contenuto richiesto. 
+
+Si potrebbe identificare un utente per sessione, dividendo sessioni con lo stesso cookie, assegnate allo stesso server. 
+
+Questi algoritmi non sono uno migliore dell'altro, dipendono dal loro utilizzo. 
+
+Un altro algoritmo \textit{locality-aware request distribution} assegna la prima richiesta di una certa risorsa al server meno carico, le richieste successive alla stessa risorsa, vengono assegnate allo stesso server. 
+
+
+Un'altra tecnica, cache affinity, si basa sul cache manager a cui è nota la situazione di cache del server. 
+
+
+Nel momento in cui si va sul cloud, a seconda dei tipi di cloud si possono realizzare operazioni diverse. Un cluster elastico mette a disposizione un numero di server virtuali dinamico nel tempo, in base al carico delle richieste. 
+
+
+\subsection{Distribuzione Globale}
+
+Invece di avere i server su uno stesso datacenter, si spargono in area geografiche diverse, per bilanciare la latenza media percepita dagli utenti, aumentando l'usabilità. 
+
+I meccanismi di distribuzione globale si possono comporre su più gerarchia, basandosi su meccanismi di distribuzione locale. 
+
+Se su di un DNS sono inseriti due o più record A per un nome, vengono restituiti RR, potenzialmente una distribuzione globale con questa tattica può avere prestazioni peggiori. 
+
+
+
+La distribuzione globale più semplice possibile sono i siti mirror, registrando nomi multipli con un indirizzo IP diverso per ogni server. Lo scheduling è lasciato all'utente che sceglie il server, normalmente da una pagina di partenza. Non è più utile poiché si usano siti non statici, con pagine statiche era sufficiente scrivere la pagina statica sul server mirror. 
+
+Sono due siti separati che offrono lo stesso condiviso, ma con pagine dinamiche e database si vuole avere informazioni condivise su tutti i server. 
+Inoltre, non c'è una replicazione visibile per l'utente ed il controllo della distribuzione del carico non possono essere implementati. 
+
+
+Un'altra tecnica consiste nella ridirezione HTTP, utilizzando i codici di errore 301 e 302, codici che indicano che una risorsa è stata spostata ad un'altra posizione, la prima è temporanea, la seconda è definitiva. 
+Si può ridirezionare la richiesta su un altro server, per assegnare la richiesta ad un server migliore. Dalla seconda connessione in poi è già noto il server giusto. 
+
+Si potrebbe utilizzare un sistema centralizzato, con un'entità che conosce lo stato dei server, per distribuire il carico, è un single point of failure, e deve conoscere lo stato di tutti i server. 
+Oppure si può avere un sistema distribuito, in base a criteri come il sovraccarico di un server. Si può scegliere quali page request di cui effettuare il redirect, se sono di elevata dimensione, allora è efficiente scegliere un server con più prestazioni e meno latenza. Oppure si può effettuare per per le sole pagine accedute di frequente. 
+
+
+È perfettamente compatible con ogni browser, e non introduce punti critici di vulnerabilità, distribuiti. Consente di ridirigere solo richieste HTTP, e può aumentare il traffico ed il tempo di risposta, il client instaura due connessioni HTTP per ogni richiesta. Questa tecnica ad oggi è poco utilizzata. 
+
+
+Lo scheduling basato su DNS si basa su due meccanismi, senza ridirezione basato su A o AAAA, e con ridirezione con CNAME. 
+Si usano i record CNAME per diminuire il numero di record A o AAAA da modificare, poiché assegnando un alias bisogna solo cambiare il suo record. 
+
+
+Quando un client farà il lookup di una risorsa chiede l'indirizzo IP corrispondente al nome del sito, riceve un opportuno indirizzo ed il TTL. La difficoltà sono i DNS server intermedi, che inseriscono questi indirizzi in cache per tutto il TTL. 
+
+
+
+Si può usare un TTL molto basso, ma la maggior parte dei TTL moderni non si interessano del TTL dei record, allo stesso modo i browser o i sistemi operativi che ignorano il TTL in cache. 
+Oppure si può utilizzare un TTL adattivo, in base alla frequenza delle richieste o il carico del server. 
+
+Si impostano diversi DNS server sparsi per il mondo, configurati statici con un indirizzo IP diverso dall'altro. Si possono impostare diversi indirizzi per un record, questi vengono permutati anche ad intervalli corti, quindi producono riposte diverse. 
+
+
+%% TODO fix dns, reword, add smt
+Si usano i CNAME per risolvere problema della cache, quando un resolver riceve v il CNAME, ricomincia il processo usando il nome canonico. 
+
+Questo permette di ridirezionare il processo di risoluzione verso server secondari, in grado di effettuare uno scheduling locale. 
+
+La difficoltà principale è il TTL, ed il fatto di usar eun certo numero di resolver intermedi, che spesso 
+
+Il DNS su cui viene adattata la risposta è il resolver, spesso è quello dell'operatore, con questo tipo di distribuzione è facile peggiorare l'arrivo dei contenuti. 
+
+Ci sono molti server DNS pubblici. 
+
+
+
+L'anycast è uno die meccanismi di ridirezione più famosi al mondo, questo lavora con BGP, uno stesso prefisso viene annunciato da più AS, che contiene la replica del servizio web. il BGP di ogni AS in Internet sceglie l'annuncio che corrisponde alla metrica migliore. Si porta nei punti di scambio di traffico importanti un server ed un router che solamente annunciano in modo indipendente il loro prefisso. All'utente sembra che il traffico punta sempre allo stesso indirizzo IP, che in realtà è replicato, ognuna che si gestisce una porzione del globo. Un solo nome, un solo IP, e BGP che effettua la ridirezione. 
+
+Il conflitto di IP se configurato bene, funziona correttamente. BGP effettua sempre la sua scelta deterministica, e la mantiene senza altri cambiamenti. I conflitti di indirizzi IP creano problemi quando ci sta ambiguità, potendo inviare una parte della richiesta. 
+
+
+Se non è possibile scegliere, quindi quando non sono note le scelte ottimali e si vuole una situazione semplice che funziona, si usa un sito mirror o IP anycast. Invece è possibile effettuare una scelta vera e propria con HTTP redirect, dopo aver inviato i pacchetti HTTP ed instaurato la connessione TCP, quindi tardi, oppure prima ancora di aver inviato la richiesta con DNS. 
+
+
+
+Le difficoltà dipendono da una buona allocazione del client al server, a causa del carico o per la prossimità tra i due. 
+
+
+%% TODO smt
+
+Si vorrebbe prevedere il carico del server, per poter distribuire le richieste, in base al giorno ed ora, ai fusi orari e la distribuzione geografica degli utenti. 
+
+
+Algoritmi di scheduling sono round robin o con funzioni di hash, dove la scelta è compresa interamente da questa funzione. Algoritmi dinamici che dipendono dalla conoscenza dello stato del client o server. 
+
+
+Tutti questi si basano sulla stima della distanza tra il client ed il server. Si potrebbe determinare dall'indirizzo IP del cliente, il numero di hop che separano client e server, ma si dovrebbe far aspettare il cliente. 
+
+
+Alternativamente si può usare il TTL per determinare la distanza, una stima se nessuno ha modificato le impostazioni del sistema operativo. Windows e Linux hanno due default diversi, il TTL parte da 64 o 128. 
+Anche scegliendo il minimo numero di hop non garantisce che si tratti del server a latenza minima. 
+Il tempo di latenza roundtrip è largamente indipendente dalla prossimità geografica. 
+
+Informazioni da misure attive come il tempo di latenza del roundtrip, della richiesta, cambiano nel tempo, può anche dipendere dalla banda nota disponibile sui link. Hanno bisogno di tempo e traffico addizionale per la valutazione. 
+
+
+Lo scheduling generico può utilizzare più meccanismi in successione, a più livelli. Si può scegliere con uno scheduling basato su DNS, seguito da uno scheduling basato sull'HTTP redirect. Oppure a tre livelli utilizzando come a onte uno scheduling basato su anycast. 
+
+Computer moderni in realtà realizzano molte query extra per dare l'idea di andare più velocemente. 
+
+Si possono usare dei web cluster distribuiti per sommare le due tecnologie, avendo uno scheduling a livello globale per identificare quale specifico cluster da interrogare, ed in seguito si usa uno scheduling a livello locale per scegliere lo specifico server del cluster da richiedere. 
+
+
 \clearpage
 
 \section{Kathar\'{a}}
